fixing the npm vulnerabilities

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^2.9.11",
     "axios": "^0.25.0",
     "immutability-helper": "^3.1.1",
-    "next": "12.0.0",
+    "next": "^12.3.4",
     "postmark": "^3.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
